--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Jinja2==3.0.1
 line-bot-sdk==1.16.0
 Markdown==3.4.4
 MarkupSafe==2.1.3
-numpy==1.24.3
+numpy
 oauthlib==3.2.2
 pillow==7.2.0
 protobuf==4.24.3
