--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ oauthlib==3.2.2
 pillow==7.2.0
 protobuf==4.24.3
 requests==2.31.0
-scipy==1.4.1
+# scipy==1.4.1
 six==1.16.0
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
